--- a/project.html
+++ b/project.html
@@ -167,7 +167,7 @@
             
         <div class="projects">
             <div class="project-card">
-                <img src="C:\Users\Lenovo\Documents\entitysys.jpg" alt="Project 1">
+                <img src="entitysys.jpg" alt="Project 1">
                 <h2>EntitySYS- CollegeERP</h2>
                 <p>EntitySYS, an Enterprise Management System(EMS) designed for university automation. Crafted using
                 HTML, CSS, and JavaScript, with Django powering the backend, it seamlessly integrates administrative,
@@ -177,7 +177,7 @@
             </div>
 
             <div class="project-card">
-                <img src="C:\Users\Lenovo\Documents\vhms.jpg" alt="Project 2">
+                <img src="vhms.jpg" alt="Project 2">
                 <h2>Vehicle Health Monitoring</h2>
                 <p>A Web-based Platform where a School or college transportation authority can Monitor the servicing record
                 of Bus and can get the remainder if any bus needs servicing. Using Machine learning on basis of valid
@@ -185,7 +185,7 @@
                 <a href="https://github.com/Rahulchouhan12/Project-Vehicle-Health-Monitoring-system">Source Code at Github</a>
             </div>
              <div class="project-card">
-                <img src="C:\Users\Lenovo\Documents\Crop.jpg" alt="Project 2">
+                <img src="Crop.jpg" alt="Project 2">
                 <h2>Crop Disease Prediction</h2>
                 <p>A Web-based Platform where any person can check the health plant by just uploading the image of a Plant
                 leaf on the website. We implement a CNN model for the prediction of the status of the plant. The
