--- a/project.html
+++ b/project.html
@@ -185,7 +185,7 @@
                 <a href="https://github.com/Rahulchouhan12/Project-Vehicle-Health-Monitoring-system">Source Code at Github</a>
             </div>
              <div class="project-card">
-                <img src="Crop.jpg" alt="Project 2">
+                <img src="crop.jpg" alt="Project 3">
                 <h2>Crop Disease Prediction</h2>
                 <p>A Web-based Platform where any person can check the health plant by just uploading the image of a Plant
                 leaf on the website. We implement a CNN model for the prediction of the status of the plant. The
